--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -193,9 +193,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateFillet.svg&amp;filetimestamp=20240101090229&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateFillet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Zaoblen&iacute;</a>: Vytvo&#345;&iacute; zaoblen&iacute; mezi dv&#283;ma neparaleln&iacute;mi hranami. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Tento n&aacute;stroj m&#367;&#382;e tak&eacute; vytv&aacute;&#345;et zkosen&iacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateChamfer.svg&amp;filetimestamp=20240323210113&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateChamfer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateChamfer.html" title="Sketcher CreateChamfer">Zkosen&iacute;</a>: vytvo&#345;&iacute; zkosen&iacute; mezi dv&#283;ma neparaleln&iacute;mi hranami. Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateFillet.html" title="Sketcher CreateFillet">Zaoblen&iacute;</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCurveEdition"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Trimming.svg&amp;filetimestamp=20240101091455&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Trimming.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Upravit hranu:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Trimming.svg&amp;filetimestamp=20240101091455&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Trimming.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Trimming.html" title="Sketcher Trimming">Trim Edge</a>: Trims an edge at the nearest intersections with other edges.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Trimming.svg&amp;filetimestamp=20240101091455&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Trimming.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Trimming.html" title="Sketcher Trimming">O&#345;&iacute;znout hranu</a>: O&#345;&iacute;zne hranu v nejbli&#382;&scaron;&iacute;ch pr&#367;se&#269;&iacute;c&iacute;ch s jin&yacute;mi hranami.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Split.svg&amp;filetimestamp=20240101091342&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Split.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Split.html" title="Sketcher Split">Split Edge</a>: Splits an edge while transferring most constraints.</li></ul></dd></dl>
 </div>
@@ -640,13 +638,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125027
+Cached time: 20260118125138
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.464 seconds
-Real time usage: 0.666 seconds
-Preprocessor visited node count: 1471/1000000
+CPU time usage: 0.438 seconds
+Real time usage: 0.670 seconds
+Preprocessor visited node count: 1470/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -656,19 +654,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.438      1 -total
- 23.14%   10.050      1 Template:Sketcher_Tools_navi/cs
- 12.64%    5.490      2 Template:Navigation_menu_2
- 10.52%    4.570      1 Template:Userdocnavi/cs
- 10.46%    4.543      1 Template:PropertyView
-  8.80%    3.825      5 Template:MenuCommand
-  8.62%    3.743     34 Template:Version
-  6.03%    2.618      2 Template:Docnav
-  5.82%    2.529     14 Template:KEY
-  5.52%    2.400      6 Template:Caption
+100.00%   45.542      1 -total
+ 23.18%   10.559      1 Template:Sketcher_Tools_navi/cs
+ 15.61%    7.111      1 Template:Userdocnavi/cs
+ 15.58%    7.097      2 Template:Navigation_menu_2
+  8.81%    4.010     34 Template:Version
+  7.35%    3.348      2 Template:Docnav
+  6.51%    2.964      1 Template:PropertyView
+  5.76%    2.621      6 Template:Caption
+  5.50%    2.503      8 Template:VersionPlus
+  5.43%    2.471      2 Template:Verze
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125026 and revision id 1740479. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125137 and revision id 1740481. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
